--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -664,10 +664,51 @@ img {
 .container-footer {
   display: flex;
   align-items: baseline;
+  justify-content: space-between;
 }
 
 .offer-links {
-  margin-left: 70px;
+}
+
+.form-subscribe {
+}
+
+.form-footer {
+  display: flex;
+}
+
+.input-footer {
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  background-color: #2f303a;
+  padding: 15px;
+}
+
+.button-subscribe {
+  display: flex;
+  align-items: center;
+  padding: 10px 28px;
+  min-width: 200px;
+  margin-left: 12px;
+
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+
+  color: #ffffff;
+  background-color: var(--hover-color);
+}
+
+.icon-subscribe {
+  margin-left: 10px;
 }
 
 /*MODAL window*/
@@ -697,13 +738,14 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  padding: 40px;
 }
 
-.is-hidden {
+/* .is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-}
+} */
 
 .close-button {
   width: 30px;
@@ -718,4 +760,153 @@ img {
   justify-content: center;
   align-items: center;
   cursor: pointer;
+}
+
+.icon-close {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-close:hover {
+  fill: var(--hover-color);
+}
+
+.form-element {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-tittle {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
+  text-align: center;
+  margin-bottom: 12px;
+}
+
+.label-name {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+
+  color: #757575;
+  margin-bottom: 4px;
+}
+
+.input-style {
+  outline: none;
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 42px;
+
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-insert {
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.form-element svg {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  translate: 0 -50%;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.form-element input:focus {
+  border: 1px solid var(--hover-color);
+}
+
+.form-element input:focus + svg {
+  fill: var(--hover-color);
+}
+
+.checked {
+  text-align: center;
+}
+
+.button-send {
+  padding: 10px 28px;
+  min-width: 200px;
+
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+
+  color: #ffffff;
+  background-color: var(--hover-color);
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-send:hover {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.textarea-style {
+  outline: none;
+  width: 448px;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  resize: none;
+
+  padding: 12px 16px;
+  margin-bottom: 20px;
+
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-modal textarea:focus {
+  border: 1px solid var(--hover-color);
+}
+
+.checked input:checked + label svg {
+  background-color: var(--hover-color);
+  border: none;
+}
+
+.icon-check {
+  width: 16px;
+  height: 15px;
+  border: 2px solid #212121;
+  border-radius: 2px;
+  margin-right: 9px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.style-agree {
+  display: flex;
+  align-items: center;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+
+  letter-spacing: 0.03em;
+
+  color: #757575;
+  margin-bottom: 30px;
+  padding-left: 12px;
+}
+
+.terms {
+  display: inline;
+  text-decoration: underline;
+  color: var(--hover-color);
 }
