--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -249,6 +249,8 @@ img {
   color: #ffffff;
   background-color: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-hero:hover,
@@ -678,12 +680,19 @@ img {
 }
 
 .input-footer {
+  outline: none;
   width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   background-color: #2f303a;
   padding: 15px;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .button-subscribe {
@@ -705,10 +714,17 @@ img {
 
   color: #ffffff;
   background-color: var(--hover-color);
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-subscribe {
   margin-left: 10px;
+}
+
+.button-subscribe:hover,
+.button-subscribe:focus {
+  opacity: 0.8;
 }
 
 /*MODAL window*/
@@ -741,11 +757,11 @@ img {
   padding: 40px;
 }
 
-/* .is-hidden {
+.is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-} */
+}
 
 .close-button {
   width: 30px;
@@ -818,7 +834,6 @@ img {
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 
 .form-element input:focus {
   border: 1px solid var(--hover-color);
@@ -909,4 +924,5 @@ img {
   display: inline;
   text-decoration: underline;
   color: var(--hover-color);
+  cursor: pointer;
 }
