--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -692,7 +692,13 @@ img {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
+  color: rgba(33, 150, 243, 0.6);
+
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-footer input:focus {
+  border: 1px solid var(--hover-color);
 }
 
 .button-subscribe {
@@ -826,7 +832,7 @@ img {
   margin-bottom: 10px;
 }
 
-.form-element svg {
+.form-element .icon-modal {
   position: absolute;
   top: 50%;
   left: 12px;
