--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -692,7 +692,7 @@ img {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
-  color: rgba(33, 150, 243, 0.6);
+  color: #ffffff;
 
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -836,7 +836,7 @@ img {
   position: absolute;
   top: 50%;
   left: 12px;
-  translate: 0 -50%;
+  transform: translateY(-50%);
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
